@@ -2,13 +2,17 @@ package com.example.tastyhub.fixture.userReview;
 
 import static com.example.tastyhub.fixture.user.UserFixture.USER;
 
-import java.util.Collections;
+import com.example.tastyhub.common.utils.OrderSpecifierUtil;
+import com.querydsl.core.types.OrderSpecifier;
 import java.util.List;
 
 import com.example.tastyhub.common.domain.userReview.dtos.PagingUserReviewResponse;
-import com.example.tastyhub.common.domain.userReview.dtos.UserReviewCreateRequest;
-import com.example.tastyhub.common.domain.userReview.dtos.UserReviewUpdateRequest;
+import com.example.tastyhub.common.domain.userReview.dtos.UserReviewRequest;
 import com.example.tastyhub.common.domain.userReview.entity.UserReview;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 public class UserReviewFixture {
     public static final UserReview USER_REVIEW =
@@ -17,24 +21,28 @@ public class UserReviewFixture {
             .reader(USER)
             .writer(USER)
             .grade(0)
-            .text("text")
+            .content("text")
             .build();
-    public static final UserReviewCreateRequest USER_REVIEW_CREATE_REQUEST =
-        UserReviewCreateRequest.builder()
+    public static final UserReviewRequest USER_REVIEW_CREATE_REQUEST =
+        UserReviewRequest.builder()
             .grade(0L)
-            .text("text")
+            .content("text")
             .build();
-    public static final UserReviewUpdateRequest USER_REVIEW_UPDATE_REQUEST =
-            UserReviewUpdateRequest.builder()
+    public static final UserReviewRequest USER_REVIEW_UPDATE_REQUEST =
+            UserReviewRequest.builder()
                 .grade(1L)
-                .text("new_text")
+                .content("new_text")
                 .build();
     public static final PagingUserReviewResponse PAGING_USER_REVIEW_RESPONSE = PagingUserReviewResponse.builder()
-        .userId(USER.getId())
         .grade(0L)
         .nickname(USER.getNickname())
-        .text("text")
+        .content("text")
         .build();
-    public static final List<PagingUserReviewResponse> PAGING_USER_REVIEW_RESPONSES = Collections.singletonList(
-        PAGING_USER_REVIEW_RESPONSE);
+
+    public static Pageable pageable = PageRequest.of(0, 1);
+
+    public static final Page<PagingUserReviewResponse> PAGING_USER_REVIEW_RESPONSES = new PageImpl(List.of(PAGING_USER_REVIEW_RESPONSE),pageable, 1);
+
+    public static OrderSpecifier<?>[] orderSpecifiers = OrderSpecifierUtil.getOrderSpecifiers(pageable, UserReview.class, "userReview");
+
 }
